# dcc

./: .gitignore  build_debian_pkg.sh
config/: leaf_interfaces  spine_interfaces
debian/: README.debian  changelog  control  copyright  rules
source/: CMakeLists.txt  augeas.cxx  augeas.hxx  dcc.cxx  dcc.hxx  dcc_test.cxx  deploy_heavy  deploy_light  deter_cumulus_controller.cxx  mk_pkg.sh  netlink.cxx  netlink.hxx  run.sh  util.cxx  util.hxx
source/test/: simple_vlan.conf
source/test/augroot/etc/network/: interfaces
